ios mobile overflow issue

--- a/style.css
+++ b/style.css
@@ -408,11 +408,19 @@ img.front {
     }
 }
 
-@media only screen and (orientation: landscape) {
+@media only screen and (max-width: 750px) and (orientation: landscape) {
+    .loading_screen, .stats_container, .game_board{
+        overflow: hidden;
+    }
     html{
         overflow: hidden;
     }
     body{
+        overflow-x: hidden;
+        overflow-y: hidden;
+    }
+
+    .player_villain img, .player_hero img{
         position: fixed;
         overflow-x: hidden;
         overflow-y: hidden;
